Refactor for readability and add final modifiers
Refactored several classes to improve readability by adding final modifiers to method parameters and local variables, and by restructuring conditional statements for clarity. Updated PlayerListener to reduce redundant calls to UserManager.getPlayer, improve null checks, and enhance code formatting. These changes help ensure immutability where possible and make the codebase easier to maintain.